--- a/.gitignore
+++ b/.gitignore
@@ -153,4 +153,4 @@ temp/
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 
 # Contract Types are Automatically Generated 
-./src/contracts/types/
+src/contracts/types/
