[feat][refactor] - Return Error codes instead of throwing - Add build scripts - Add example file - Export first script from index.ts - Add declarations to typescript build

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,3 @@
+# For examples 
+PRIVATE_KEY=""
 PROVIDER_URL=""
-SUKU_ADDR=""
-USDC_ADDR=""
-CSUKU_ADDR=""
-CUSDC_ADDR=""
-# Unitroller Address
-COMPTROLLER_ADDR=""
-PRICE_ORACLE_ADDR=""
