--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
-	"name": "cli-boilerplate",
-	"version": "1.0.0",
-	"description": "Boilerplate code for developing Node CLI based applications.",
-	"main": "src/index.ts",
+	"name": "@suku/defi-evm-scripts",
+	"version": "0.1.0",
+	"description": "A collection of scripts to run various tasks on Ethereum based defi smart contracts written in Typescript.",
+	"main": "dist/index.js",
+	"types": "dist/index.d.ts",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "ts-node ./src/index.ts",
+		"prepublish": "npm run build",
+		"prebuild": "npm run typechain",
+		"build": "tsc",
+		"example": "ts-note ./src/example.ts",
 		"postinstall": "npm run typechain",
-		"typechain": "typechain --target=ethers-v5 --outDir './src/contracts/types' './src/contracts/abis/**/*.json'"
+		"typechain": "typechain --target=ethers-v5 --outDir './src/contracts/types' './src/contracts/abis/**/*.json'",
+		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"keywords": [
 		"[\"CLI\"]"
@@ -15,6 +19,7 @@
 	"author": "Bryce Doganer",
 	"license": "MIT",
 	"dependencies": {
+		"@ethersproject/bignumber": "^5.0.7",
 		"@types/web3": "^1.2.2",
 		"bignumber.js": "^9.0.0",
 		"chalk": "^4.0.0",
@@ -28,7 +33,6 @@
 		"minimist": "^1.2.5",
 		"node-rest-client-promise": "^3.1.1",
 		"simple-git": "^1.132.0",
-		"typechain": "^2.0.0",
 		"web3": "^1.2.11"
 	},
 	"devDependencies": {
@@ -38,6 +42,7 @@
 		"@types/inquirer": "^6.5.0",
 		"ts-node": "^8.8.2",
 		"tslint": "^6.1.1",
-		"typescript": "^3.8.3"
+		"typescript": "^3.8.3",
+		"typechain": "^2.0.0"
 	}
 }
